--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,8 +8,14 @@
   box-sizing: border-box;
 }
 
+:root {
+  margin: 0 auto;
+  max-inline-size: 1440px;
+}
+
 body {
-  margin: 0;
+  margin: 0 auto;
+  padding: 0;
 }
 
 h1,
