--- a/styles/style.css
+++ b/styles/style.css
@@ -13,4 +13,470 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--inter);
+  font-variation-settings: "wght" var(--wght);
+  inline-size: var(--block__width);
+  background-image: var(--main__gradient);
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+
+.block {
+  margin: 0 auto;
+  box-sizing: border-box;
+  background-color: var(--background__color);
+  width: 100%;
+  height: 100%;
+}
+
+.header {
+  block-size: var(--block__height);
+  margin-block-start: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: solid 2px var(--accent__color);
+}
+
+.header__block {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+}
+
+.header__title {
+  font-family: var(--Press__start_2P);
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  text-transform: uppercase;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+.header__text {
+  font-family: var(--Press__start_2P);
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  text-transform: uppercase;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+.main {
+  margin-block-start: 98px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  box-sizing: border-box;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  border: var(--border);
+  box-sizing: border-box;
+}
+
+.card__title {
+  font-family: var(--inter);
+  font-variation-settings: "wght" var(--wght);
+  font-size: 18px;
+  padding-block-start: 4.5px;
+  padding-inline-start: 10px;
+  padding-block-end: 3.5px;
+}
+
+.img__wrapper {
+  margin: 0;
+  padding: 0;
+  position: relative;
+  box-sizing: border-box;
+  border-top: solid 2px var(--accent__color);
+  border-bottom: solid 2px var(--accent__color);
+}
+
+.card__img {
+  margin: 0;
+  padding: 0;
+  display: block;
+  inline-size: 100%;
+  block-size: 100%;
+  box-sizing: border-box;
+  object-position: center;
+  object-fit: cover;
+  aspect-ratio: 1 / 1;
+}
+
+.img__label {
+  font-family: var(--Press__start_2P);
+  position: absolute;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 14px;
+  text-transform: uppercase;
+  color: var(--accent__color);
+  mix-blend-mode: hard-light;
+  opacity: 0.5;
+  top: 25px;
+  right: 25px;
+  text-shadow: calc(1px * -1) calc(1px * -1) 0 var(--text__stroke_color),
+    1px calc(1px * -1) 0 var(--text__stroke_color),
+    calc(1px * -1) 1px 0 var(--text__stroke_color),
+    1px 1px 0 var(--text__stroke_color);
+  box-sizing: border-box;
+  z-index: 1;
+}
+
+@supports (-webkit-text-stroke: 1px black) {
+  .stroked-text {
+    text-shadow: none;
+    -webkit-text-stroke: 1px var(--text__stroke_color);
+  }
+}
+
+.img__go {
+  filter: opacity(50%);
+}
+
+.img__fear {
+  filter: contrast(200%);
+}
+
+.img__i_can {
+  filter: saturate(20%);
+}
+
+.img__repeat {
+  filter: invert(30%);
+}
+
+.img__together {
+  filter: grayscale(40%);
+}
+
+.img__attention {
+  filter: brightness(200%);
+}
+
+.img__work {
+  filter: blur(10px);
+}
+
+.img__long_way {
+  filter: sepia(10%) saturate(200%);
+}
+
+.card__text_block {
+  padding: 25px;
+  font-family: var(--inter);
+  line-height: 21px;
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  box-sizing: border-box;
+}
+
+.button__container {
+  padding: 0;
+  width: 160px;
+  margin-inline-end: 25px;
+  margin-block-end: 23px;
+  box-sizing: border-box;
+  align-self: flex-end;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+}
+
+.button {
+  height: 38px;
+  border: var(--border);
+  box-sizing: border-box;
+  position: relative;
+  overflow: hidden;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--background__color);
+  isolation: isolate;
+  text-decoration: none;
+  transition: box-shadow 0.3s ease;
+}
+
+.button__heart {
+  padding: 0;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  display: block;
+  width: 38px;
+  border-color: transparent;
+  box-sizing: border-box;
+  background-color: transparent;
+  transition: 0.3s ease;
+}
+
+.button__card {
+  width: 130px;
+}
+
+.button__text {
+  font-family: var(--Press__start_2P);
+  font-size: 14px;
+  padding: 10px 35px;
+  line-height: 90%;
+  letter-spacing: 0;
+  box-sizing: border-box;
+  color: var(--button__text_color);
+  fill: var(--background__color);
+  mix-blend-mode: difference;
+  position: relative;
+  z-index: 1;
+}
+
+.footer {
+  padding-block-start: 50px;
+  display: flex;
+  justify-content: center;
+  background-color: transparent;
+  margin-block-end: 100px;
+}
+
+.footer__button {
+  background-color: var(--background__color);
+  width: 335px;
+  height: 55px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  box-sizing: border-box;
+}
+
+.floppy {
+  width: 21px;
+  height: 21px;
+}
+
+.button__text_footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  padding: 0;
+  outline: none;
+}
+
+.dialog {
+  width: clamp(21.31rem, 21.05rem + 1.13vw, 22.06rem);
+  height: 191px;
+  display: none;
+  padding: 30px;
+  position: fixed;
+  box-sizing: border-box;
+}
+
+.dialog[open] {
+  border: var(--border);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 23px;
+}
+
+.dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+}
+
+.dialog__title {
+  font-family: var(--Press__start_2P);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  letter-spacing: 0;
+  text-transform: uppercase;
+  color: var(--button__text_color);
+}
+
+.dialog__text {
+  font-family: var(--Press__start_2P);
+  font-size: 14px;
+  padding: 0;
+  box-sizing: border-box;
+  color: var(--button__text_color);
+  fill: var(--background__color);
+  mix-blend-mode: difference;
+  position: relative;
+  z-index: 2;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  gap: 12px;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.dialog__floppy {
+  inline-size: 39px;
+  block-size: 39px;
+}
+
+form {
+  width: 100%;
+}
+
+.dialog__button {
+  text-transform: uppercase;
+  width: clamp(261px, 250.228px + 2.873vw, 293px);
+  box-sizing: border-box;
+}
+
+@media (width <= 375px) {
+  .header {
+    outline: none;
+    border: var(--border);
+  }
+
+  .main {
+    margin-block-start: 100px;
+  }
+
+  .card__title {
+    padding: 4px 10px;
+  }
+
+  .footer__button {
+    inline-size: 306px;
+    block-size: 84px;
+    box-sizing: border-box;
+  }
+
+  .floppy {
+    inline-size: 28px;
+    block-size: 28px;
+  }
+
+  .footer__floppy {
+    margin: 0 auto;
+    display: block;
+    margin-block-end: 8px;
+  }
+
+  .button__text_footer {
+    display: block;
+  }
+
+  .dialog__floppy {
+    inline-size: 39px;
+    block-size: 39px;
+  }
+
+  .dialog {
+    padding: 0;
+    padding-block-start: 30px;
+    padding-block-end: 30px;
+    padding-inline-start: 38px;
+  }
+}
+
+.button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 0 var(--accent__color);
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  z-index: 1;
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+}
+
+.button:hover::before {
+  transform: translateX(0);
+  box-shadow: none;
+}
+
+.button__heart:focus {
+  outline: none;
+    box-shadow: none;
+}
+
+.button__heart:focus-visible {
+  border: var(--border);
+    box-shadow: none;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.contour {
+  transition: fill 0.1s linear;
+}
+
+.main-body {
+  transition: var(--transition__heart);
+}
+
+.core {
+  transition: var(--transition__heart) 0.03s;
+}
+
+.like-icon:hover .core {
+  fill: var(--contour__color);
+  transition: var(--transition__heart);
+}
+
+.like-icon:hover .main-body {
+  fill: var(--contour__color);
+  transition: var(--transition__heart) 0.05s;
+}
+
+.like-icon:active .core {
+  fill: var(--animation__fill_color);
+  transition: var(--transition__heart);
+}
+
+.like-icon:active .main-body {
+  fill: var(--animation__fill_color);
+  transition: var(--transition__heart) 0.05s;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--animation__fill_color);
+  transition: var(--transition__heart);
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--animation__fill_color);
+  transition: var(--transition__heart) 0.05s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--animation__fill_color);
+  transition: var(--transition__heart) 0.06s;
+}
+
+.like-icon {
+  transform-origin: center;
+  box-sizing: border-box;
+  transform: translateX(-2.5px);
+}
+
+.like-icon.is-liked .heart {
+  animation: heart-scale 0.3s ease-in 0.1s 1;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks-fade 0.3s ease-in 0.3s 1;
 }
