--- a/styles/style.css
+++ b/styles/style.css
@@ -13,43 +13,31 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  font-family: var(--inter);
+  font-family: var(--main-font), sans-serif;
   font-variation-settings: "wght" var(--wght);
-  inline-size: var(--block__width);
-  background-image: var(--main__gradient);
+  inline-size: var(--block-width);
+  background-image: var(--main-gradient);
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh;
 }
 
-.block {
-  margin: 0 auto;
-  box-sizing: border-box;
-  background-color: var(--background__color);
-  width: 100%;
-  height: 100%;
-}
-
 .header {
-  block-size: var(--block__height);
+  block-size: var(--block-height);
   margin-block-start: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  outline: var(--border);
-  box-sizing: border-box;
-}
-
-.header__block {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  justify-content: center;
   align-items: center;
+  outline: var(--border);
+  background-color: var(--background-color);
+  box-sizing: border-box;
 }
 
 .header__title {
-  font-family: var(--Press__start_2P);
+  font-family: var(--accent-font), sans-serif;
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   text-transform: uppercase;
   font-weight: 400;
@@ -57,7 +45,7 @@
 }
 
 .header__text {
-  font-family: var(--Press__start_2P);
+  font-family: var(--accent-font), sans-serif;
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
   text-transform: uppercase;
   font-weight: 400;
@@ -65,27 +53,34 @@
 }
 
 .main {
+  margin: 0 auto;
   margin-block-start: 98px;
   display: flex;
   flex-direction: column;
   gap: 50px;
   box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
+  margin: 0;
+  inline-size: var(--block-width);
   display: flex;
   flex-direction: column;
   border: var(--border);
   box-sizing: border-box;
+  background-color: var(--background-color);
 }
 
 .card__title {
-  font-family: var(--inter);
+  font-family: var(--main-font), sans-serif;
   font-variation-settings: "wght" var(--wght);
   font-size: 18px;
-  padding-block-start: 4.5px;
+  padding-block-start: 5px;
   padding-inline-start: 10px;
-  padding-block-end: 3.5px;
+  padding-inline-end: 10px;
+  padding-block-end: 2px;
 }
 
 .img__wrapper {
@@ -93,8 +88,8 @@
   padding: 0;
   position: relative;
   box-sizing: border-box;
-  border-top: solid 2px var(--accent__color);
-  border-bottom: solid 2px var(--accent__color);
+  border-top: solid 2px var(--accent-color);
+  border-bottom: solid 2px var(--accent-color);
 }
 
 .card__img {
@@ -110,21 +105,21 @@
 }
 
 .img__label {
-  font-family: var(--Press__start_2P);
+  font-family: var(--accent-font), sans-serif;
   position: absolute;
   font-weight: 400;
   font-size: 14px;
   line-height: 14px;
   text-transform: uppercase;
-  color: var(--accent__color);
+  color: var(--accent-color);
   mix-blend-mode: hard-light;
   opacity: 0.5;
   top: 25px;
   right: 25px;
-  text-shadow: calc(1px * -1) calc(1px * -1) 0 var(--text__stroke_color),
-    1px calc(1px * -1) 0 var(--text__stroke_color),
-    calc(1px * -1) 1px 0 var(--text__stroke_color),
-    1px 1px 0 var(--text__stroke_color);
+  text-shadow: calc(1px * -1) calc(1px * -1) 0 var(--text-stroke-color),
+    1px calc(1px * -1) 0 var(--text-stroke-color),
+    calc(1px * -1) 1px 0 var(--text-stroke-color),
+    1px 1px 0 var(--text-stroke-color);
   box-sizing: border-box;
   z-index: 1;
 }
@@ -132,7 +127,7 @@
 @supports (-webkit-text-stroke: 1px black) {
   .stroked-text {
     text-shadow: none;
-    -webkit-text-stroke: 1px var(--text__stroke_color);
+    -webkit-text-stroke: 1px var(--text-stroke-color);
   }
 }
 
@@ -170,7 +165,7 @@
 
 .card__text_block {
   padding: 25px;
-  font-family: var(--inter);
+  font-family: var(--main-font), sans-serif;
   line-height: 21px;
   font-size: 18px;
   display: flex;
@@ -199,11 +194,11 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--background__color);
+  background-color: var(--background-color);
   isolation: isolate;
   text-decoration: none;
   transition: box-shadow 0.3s ease;
-  color: var(--button__text_color);
+  color: var(--button-text-color);
 }
 
 .button__heart {
@@ -226,31 +221,26 @@
 }
 
 .button__text {
-  font-family: var(--Press__start_2P);
+  font-family: var(--accent-font), sans-serif;
   font-size: 14px;
   padding: 10px 35px;
   line-height: 90%;
   letter-spacing: 0;
+  justify-self: center;
+  align-self: center;
   box-sizing: border-box;
-  color: var(--button__text_color);
-  fill: var(--background__color);
+  color: var(--button-text-color);
+  fill: var(--background-color);
   mix-blend-mode: difference;
   position: relative;
   z-index: 1;
 }
 
-.footer {
-  padding-block-start: 50px;
-  display: flex;
-  justify-content: center;
-  background-color: transparent;
-  margin-block-end: 100px;
-}
-
-.footer__button {
-  background-color: var(--background__color);
+.button__save {
+  background-color: var(--background-color);
   width: 335px;
   height: 55px;
+  margin-block-end: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -263,7 +253,7 @@
   height: 21px;
 }
 
-.button__text_footer {
+.button__text_save {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -274,9 +264,9 @@
 
 .dialog {
   width: clamp(21.31rem, 21.05rem + 1.13vw, 22.06rem);
-  height: 191px;
+  block-size: 191px;
   display: none;
-  padding: 30px;
+  padding-inline: clamp(30px, calc(43.52px - 0.94vw), 40px);
   position: fixed;
   box-sizing: border-box;
 }
@@ -285,9 +275,7 @@
   border: var(--border);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 23px;
+  justify-content: space-around;
 }
 
 .dialog::backdrop {
@@ -295,28 +283,28 @@
 }
 
 .dialog__title {
-  font-family: var(--Press__start_2P);
+  font-family: var(--accent-font), sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 150%;
   letter-spacing: 0;
   text-transform: uppercase;
-  color: var(--button__text_color);
+  color: var(--button-text-color);
 }
 
 .dialog__text {
-  font-family: var(--Press__start_2P);
+  font-family: var(--accent-font), sans-serif;
   font-size: 14px;
   padding: 0;
-  color: var(--button__text_color);
-  fill: var(--background__color);
+  color: var(--button-text-color);
+  fill: var(--background-color);
   mix-blend-mode: difference;
   position: relative;
   z-index: 2;
   display: grid;
-  grid-template-columns: 1fr 5fr;
-  gap: 12px;
+  grid-template-columns: min-content 5fr;
+  gap: 17px;
   align-items: center;
   box-sizing: border-box;
 }
@@ -332,12 +320,11 @@ form {
 
 .dialog__button {
   text-transform: uppercase;
-  width: clamp(261px, 250.228px + 2.873vw, 293px);
+  width: clamp(261px, calc(249.73px + 3vw), 293px);
   box-sizing: border-box;
 }
 
 @media (width <= 375px) {
-
   .header {
     outline: none;
     border: var(--border);
@@ -351,7 +338,7 @@ form {
     padding: 4px 10px;
   }
 
-  .footer__button {
+  .button__save {
     inline-size: 306px;
     block-size: 84px;
     box-sizing: border-box;
@@ -362,13 +349,13 @@ form {
     block-size: 28px;
   }
 
-  .footer__floppy {
+  .save__floppy {
     margin: 0 auto;
     display: block;
     margin-block-end: 8px;
   }
 
-  .button__text_footer {
+  .button__text_save {
     display: block;
   }
 
@@ -376,18 +363,11 @@ form {
     inline-size: 39px;
     block-size: 39px;
   }
-
-  .dialog {
-    padding: 0;
-    padding-block-start: 30px;
-    padding-block-end: 30px;
-    padding-inline-start: 38px;
-  }
 }
 
 .button:focus {
   outline: none;
-  box-shadow: 2px 2px 0 0 var(--accent__color);
+  box-shadow: 2px 2px 0 0 var(--accent-color);
 }
 
 .button::before {
@@ -427,46 +407,46 @@ form {
 }
 
 .main-body {
-  transition: var(--transition__heart);
+  transition: var(--transition-heart);
 }
 
 .core {
-  transition: var(--transition__heart) 0.03s;
+  transition: var(--transition-heart) 0.03s;
 }
 
 .like-icon:hover .core {
-  fill: var(--contour__color);
-  transition: var(--transition__heart);
+  fill: var(--contour-color);
+  transition: var(--transition-heart);
 }
 
 .like-icon:hover .main-body {
-  fill: var(--contour__color);
-  transition: var(--transition__heart) 0.05s;
+  fill: var(--contour-color);
+  transition: var(--transition-heart) 0.05s;
 }
 
 .like-icon:active .core {
-  fill: var(--animation__fill_color);
-  transition: var(--transition__heart);
+  fill: var(--animation-fill-color);
+  transition: var(--transition-heart);
 }
 
 .like-icon:active .main-body {
-  fill: var(--animation__fill_color);
-  transition: var(--transition__heart) 0.05s;
+  fill: var(--animation-fill-color);
+  transition: var(--transition-heart) 0.05s;
 }
 
 .like-icon.is-liked .core {
-  fill: var(--animation__fill_color);
-  transition: var(--transition__heart);
+  fill: var(--animation-fill-color);
+  transition: var(--transition-heart);
 }
 
 .like-icon.is-liked .main-body {
-  fill: var(--animation__fill_color);
-  transition: var(--transition__heart) 0.05s;
+  fill: var(--animation-fill-color);
+  transition: var(--transition-heart) 0.05s;
 }
 
 .like-icon.is-liked .contour {
-  fill: var(--animation__fill_color);
-  transition: var(--transition__heart) 0.06s;
+  fill: var(--animation-fill-color);
+  transition: var(--transition-heart) 0.06s;
 }
 
 .like-icon {
@@ -477,6 +457,7 @@ form {
 
 .like-icon.is-liked .heart {
   animation: heart-scale 0.3s ease-in 0.1s 1;
+  transform-origin: center;
 }
 
 .like-icon.is-liked .sparks {
