--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,9 +1,9 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
-  --inter: "Inter-Variable", sans-serif;
-  --Press__start_2P: "Press Start 2P", sans-serif;
+  --main-font: "Inter-Variable";
+  --accent-font: "Press Start 2P";
   --wght: 410;
-  --main__gradient: repeating-linear-gradient(
+  --main-gradient: repeating-linear-gradient(
       to right,
       #d3d3d3,
       #d3d3d3 2px,
@@ -18,16 +18,16 @@
       transparent 4px
     ),
     linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a 100%);
-  --block__width: clamp(375px, round(nearest, 260.56px + 30.52vw, 1px), 700px);
-  --block__height: clamp(327px, 3.85vw + 312.56px, 368px);
-  --text__stroke_color: #fff;
-  --accent__color: #000;
-  --button__text_color: #fff;
-  --background__color: #fff;
-  --contour__color: #000;
-  --animation__fill_color: red;
-  --transition__heart: 0.3s linear;
-  --border: solid 2px var(--accent__color);
+  --block-width: clamp(375px, round(nearest, 260.56px + 30.52vw, 1px), 700px);
+  --block-height: clamp(327px, 3.85vw + 312.56px, 368px);
+  --text-stroke-color: #fff;
+  --accent-color: #000;
+  --button-text-color: #fff;
+  --background-color: #fff;
+  --contour-color: #000;
+  --animation-fill-color: red;
+  --transition-heart: 0.3s linear;
+  --border: solid 2px var(--accent-color);
 }
 
 .card__title {
